--- a/app/package.json
+++ b/app/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "chat",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "nodemon -L app/chat.js"
-  },
-  "dependencies": {
-    "express": "~4.9.0",
-	"redis": "~0.12.1",
-	"hiredis": "~0.1.17",
-    "socket.io": "*"
-  }
+	"name": "chat-sample",
+	"author": "Tan SEZER <tnsezer@gmail.com>",
+	"license": "MIT",
+	"description": "Private Chat Sample With Redis and Socket.io",
+  	"version": "1.0.0",
+  	"private": true,
+  	"scripts": {
+    	"start": "nodemon -L app/chat.js"
+  	},
+  	"dependencies": {
+    	"express": "~4.9.0",
+		"redis": "~0.12.1",
+		"hiredis": "~0.1.17",
+    	"socket.io": "*"
+  	}
 }
