docker-compose file was changed with version 2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
+version: '2'
 
-node:
-    build: .
-    volumes:
-        - "./app:/src/app"
-    ports:
-        - "2052:3000"
-    expose:
-        - "2052"
-    links:
-        - "redis:redis"
+services:
+    node:
+        build: .
+        volumes:
+            - "./app:/src/app"
+        ports:
+            - "2052:3000"
+        expose:
+            - "2052"
+        links:
+            - "redis:redis"
 
-redis:
-    image: redis  
-    ports:
-        - "6379:6379"
-    expose:
-        - "6379"
+    redis:
+        image: redis  
+        ports:
+            - "6379:6379"
+        expose:
+            - "6379"
 
